dissipationtheory/dissipation8a.py, dissipationtheory/dissipation8b.py, development/dissipation-theory--Study-44, development/dissipation-theory--Study-45: Modify integrand1, integrand2, integrand1jit, and integrand2jit to take two locations as input.  Modify K, K_jit, gamma_perpendicular_jit, freq_perpendicular_jit, the code in Study-44 accordingly.  Rerun Study-45 to confirm.

--- a/development/dissipation-theory--Study-44.ipynb
+++ b/development/dissipation-theory--Study-44.ipynb
@@ -596,7 +596,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9260801207768308"
+       "0.9261562258439279"
       ]
      },
      "execution_count": 19,
@@ -605,7 +605,7 @@
     }
    ],
    "source": [
-    "integrand1(1.01, 2, sample1_v8a, ureg.Quantity(0,'Hz'), ureg.Quantity([2, 5, 10], 'nm'), part=np.real)"
+    "integrand1(1.01, 2, sample1_v8a, ureg.Quantity(0,'Hz'), ureg.Quantity([2, 5, 10], 'nm'), ureg.Quantity([2, 5, 10], 'nm'), part=np.real)"
    ]
   },
   {
@@ -617,7 +617,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8970645217251304"
+       "0.897138242296477"
       ]
      },
      "execution_count": 20,
@@ -626,7 +626,7 @@
     }
    ],
    "source": [
-    "integrand2(1.01, 2, sample2_v8a, ureg.Quantity(0,'Hz'), ureg.Quantity([2, 5, 10], 'nm'), part=np.real)"
+    "integrand2(1.01, 2, sample2_v8a, ureg.Quantity(0,'Hz'), ureg.Quantity([2, 5, 10], 'nm'), ureg.Quantity([2, 5, 10], 'nm'), part=np.real)"
    ]
   },
   {
@@ -661,7 +661,7 @@
     }
    ],
    "source": [
-    "resultB1 = K_v8a(integrand1, 2, sample1_v8a, ureg.Quantity(0.001,'Hz'), ureg.Quantity([0, 0, 20], 'nm'), part=np.real)\n",
+    "resultB1 = K_v8a(integrand1, 2, sample1_v8a, ureg.Quantity(0.001,'Hz'), ureg.Quantity([0, 0, 20], 'nm'), ureg.Quantity([0, 0, 20], 'nm'), part=np.real)\n",
     "resultB1.to('1/um**3')"
    ]
   },
@@ -697,7 +697,7 @@
     }
    ],
    "source": [
-    "resultB2 = K_v8a(integrand2, 2, sample2_v8a, ureg.Quantity(0.001,'Hz'), ureg.Quantity([0, 0, 20], 'nm'), part=np.real)\n",
+    "resultB2 = K_v8a(integrand2, 2, sample2_v8a, ureg.Quantity(0.001,'Hz'), ureg.Quantity([0, 0, 20], 'nm'), ureg.Quantity([0, 0, 20], 'nm'), part=np.real)\n",
     "resultB2.to('1/um**3')"
    ]
   },
@@ -865,14 +865,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 196 μs, sys: 27 μs, total: 223 μs\n",
-      "Wall time: 231 μs\n"
+      "CPU times: user 139 μs, sys: 101 μs, total: 240 μs\n",
+      "Wall time: 246 μs\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.8970645217251303"
+       "0.8971382422964769"
       ]
      },
      "execution_count": 27,
@@ -882,7 +882,7 @@
    ],
    "source": [
     "%%time\n",
-    "integrand2jit(1.01, 2, sample2_jit, 0., np.array([2e-9, 5e-9, 10e-9]), False)"
+    "integrand2jit(1.01, 2, sample2_jit, 0., np.array([2e-9, 5e-9, 10e-9]), np.array([2e-9, 5e-9, 10e-9]), False)"
    ]
   },
   {
@@ -895,14 +895,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.58 ms, sys: 585 μs, total: 7.17 ms\n",
-      "Wall time: 16.3 ms\n"
+      "CPU times: user 4.42 ms, sys: 949 μs, total: 5.36 ms\n",
+      "Wall time: 5.01 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.8970645217251304"
+       "0.897138242296477"
       ]
      },
      "execution_count": 28,
@@ -912,7 +912,7 @@
    ],
    "source": [
     "%%time\n",
-    "integrand2(1.01, 2, sample2_v8a, ureg.Quantity(0,'Hz'), ureg.Quantity([2, 5, 10], 'nm'), part=np.real)"
+    "integrand2(1.01, 2, sample2_v8a, ureg.Quantity(0,'Hz'), ureg.Quantity([2, 5, 10], 'nm'), ureg.Quantity([2, 5, 10], 'nm'), part=np.real)"
    ]
   },
   {
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 29,
    "id": "b47f2dc7-f620-4810-97b7-05e95983f151",
    "metadata": {},
    "outputs": [
@@ -941,8 +941,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.08 ms, sys: 6 μs, total: 1.09 ms\n",
-      "Wall time: 1.1 ms\n"
+      "CPU times: user 2.28 ms, sys: 329 μs, total: 2.61 ms\n",
+      "Wall time: 3.46 ms\n"
      ]
     },
     {
@@ -957,14 +957,14 @@
        "<Quantity(2.832029282621744e+22, '1 / meter ** 3')>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%time\n",
-    "resultC1 = K_jit(integrand1jit, 2, sample1_jit, 0.001, np.array([0, 0, 20e-9]), False)\n",
+    "resultC1 = K_jit(integrand1jit, 2, sample1_jit, 0.001, np.array([0, 0, 20e-9]), np.array([0, 0, 20e-9]), False)\n",
     "resultC1"
    ]
   },
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 30,
    "id": "705dc35d-89e7-47d0-9c4a-cfe5e15c7158",
    "metadata": {},
    "outputs": [
@@ -986,8 +986,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.59 ms, sys: 15 μs, total: 1.6 ms\n",
-      "Wall time: 1.64 ms\n"
+      "CPU times: user 1.43 ms, sys: 61 μs, total: 1.49 ms\n",
+      "Wall time: 1.54 ms\n"
      ]
     },
     {
@@ -1002,14 +1002,14 @@
        "<Quantity(2.82798579785767e+22, '1 / meter ** 3')>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%time\n",
-    "resultC2 = K_jit(integrand2jit, 2, sample2_jit, 0.001, np.array([0, 0, 20e-9]), False)\n",
+    "resultC2 = K_jit(integrand2jit, 2, sample2_jit, 0.001, np.array([0, 0, 20e-9]), np.array([0, 0, 20e-9]), False)\n",
     "resultC2"
    ]
   },
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 31,
    "id": "de30f83e-8022-4f8a-8371-cc5f7c508f0f",
    "metadata": {},
    "outputs": [],
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 32,
    "id": "e1cdb373-39db-4264-b3c2-ea3053fbffcb",
    "metadata": {},
    "outputs": [
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 33,
    "id": "b9c921ca",
    "metadata": {},
    "outputs": [
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 34,
    "id": "64516a87-6bbb-4664-8234-6cf7ea620825",
    "metadata": {},
    "outputs": [
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 35,
    "id": "2f730a96",
    "metadata": {},
    "outputs": [
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 37,
    "id": "ea0fd3d7-2fa8-4da6-80d9-1c03276aa80a",
    "metadata": {},
    "outputs": [
@@ -1210,7 +1210,7 @@
        "<Quantity(23.206670538554317, '1 / micrometer')>"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1221,13 +1221,14 @@
     "    power=0, \n",
     "    sample=sample1_jit, \n",
     "    omega=0,\n",
-    "    location=np.array([0, 0, 20e-9]), \n",
+    "    location1=np.array([0, 0, 20e-9]),\n",
+    "    location2=np.array([0, 0, 20e-9]), \n",
     "    isImag=False).to('1/um')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 39,
    "id": "12eec4a5-0c67-4756-8c85-871ee266d988",
    "metadata": {},
    "outputs": [
@@ -1243,7 +1244,7 @@
        "<Quantity(22.910064305128017, '1 / micrometer')>"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,7 +1255,8 @@
     "    power=0, \n",
     "    sample=sample2_jit, \n",
     "    omega=0,\n",
-    "    location=np.array([0, 0, 20e-9]), \n",
+    "    location1=np.array([0, 0, 20e-9]),\n",
+    "    location2=np.array([0, 0, 20e-9]), \n",
     "    isImag=False).to('1/um')"
    ]
   },
@@ -1280,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 41,
    "id": "6fecd80d-3115-42ba-b9f4-35c5fbf16166",
    "metadata": {},
    "outputs": [
@@ -1291,7 +1293,7 @@
        "       <Quantity(2.82798579785767e+22, '1 / meter ** 3')>], dtype=object)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,14 +1301,15 @@
    "source": [
     "# the arguments: integrand, power, sample, omega, location, isImag\n",
     "\n",
-    "K_jit_vectorized = np.vectorize(K_jit, otypes=[object], excluded=['integrand','power','sample','location','isImag'])\n",
+    "K_jit_vectorized = np.vectorize(K_jit, otypes=[object], excluded=['integrand','power','sample','location1','location2','isImag'])\n",
     "\n",
     "K_jit_vectorized(\n",
     "    integrand=integrand2jit, \n",
     "    power=2, \n",
     "    sample=sample2_jit, \n",
     "    omega=[0.000, 0.001],\n",
-    "    location=np.array([0, 0, 20e-9]), \n",
+    "    location1=np.array([0, 0, 20e-9]), \n",
+    "    location2=np.array([0, 0, 20e-9]), \n",
     "    isImag=False)"
    ]
   },
@@ -1320,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 43,
    "id": "2a3bff30-6387-409a-8928-d955dc34a5c5",
    "metadata": {},
    "outputs": [],
@@ -1333,7 +1336,8 @@
     "        power=2, \n",
     "        sample=sample2_jit, \n",
     "        omega=0.001,\n",
-    "        location=[np.array([0, 0, 20e-9]),np.array([0, 0, 40e-9])], \n",
+    "        location1=[np.array([0, 0, 20e-9]),np.array([0, 0, 40e-9])],\n",
+    "        location2=[np.array([0, 0, 20e-9]),np.array([0, 0, 40e-9])],\n",
     "        isImag=False)"
    ]
   },
@@ -1347,12 +1351,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 44,
    "id": "784e25c2-98e8-40f3-94d4-751f28aa208c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = [K_jit(integrand2jit, 2, sample2_jit, 0.001, location, False)\n",
+    "result = [K_jit(integrand2jit, 2, sample2_jit, 0.001, location, location, False)\n",
     "     for location in [np.array([0, 0, 20e-9]), np.array([0, 0, 40e-9])]]"
    ]
   },
@@ -1366,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 45,
    "id": "04708111-898a-4b1b-a961-6a3c66432ad4",
    "metadata": {},
    "outputs": [
@@ -1382,7 +1386,7 @@
        "<Quantity([28279.85797858  3538.13635119], '1 / micrometer ** 3')>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1420,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 46,
    "id": "d1fc1a86-48fb-486d-be0f-4a8acd68fb81",
    "metadata": {},
    "outputs": [],
@@ -1438,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 47,
    "id": "204e0e69-7bfb-4a58-ada2-f6860aa3ad61",
    "metadata": {},
    "outputs": [
@@ -1493,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 48,
    "id": "f5a4ad40-c802-4b49-8753-eadac49f7f8b",
    "metadata": {},
    "outputs": [
@@ -1509,7 +1513,7 @@
        "<Quantity(48.00143564666106, '1 / micrometer')>"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1520,7 +1524,8 @@
     "    power=0, \n",
     "    sample=sample1_jit_metal, \n",
     "    omega=0,\n",
-    "    location=np.array([3e-9, 5e-9, 10e-9]), \n",
+    "    location1=np.array([  0,     0, 10e-9]),\n",
+    "    location2=np.array([3e-9, 5e-9, 10e-9]), \n",
     "    isImag=False).to('1/um')\n",
     "\n",
     "K_I"
@@ -1536,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 49,
    "id": "a7348470-9bf0-48a8-90ae-021d8474cf87",
    "metadata": {},
    "outputs": [
@@ -1552,7 +1557,7 @@
        "<Quantity(48.00153607373192, '1 / micrometer')>"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1572,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 50,
    "id": "981f444d-5762-4a96-9bc0-8ce6db0f814b",
    "metadata": {},
    "outputs": [
@@ -1598,7 +1603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 51,
    "id": "2c969b5a-e420-4984-865f-0123ac119034",
    "metadata": {},
    "outputs": [],
@@ -1616,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 52,
    "id": "856c51ff-2b4b-43aa-97fa-3b987a64bb10",
    "metadata": {},
    "outputs": [
@@ -1671,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 53,
    "id": "c94482a3-b7b3-434c-af56-04aebc0a8b98",
    "metadata": {},
    "outputs": [
@@ -1687,7 +1692,7 @@
        "<Quantity(48.00145327358575, '1 / micrometer')>"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1698,7 +1703,8 @@
     "    power=0, \n",
     "    sample=sample2_jit_metal, \n",
     "    omega=0,\n",
-    "    location=np.array([3e-9, 5e-9, 10e-9]), \n",
+    "    location1=np.array([  0,     0, 10e-9]),\n",
+    "    location2=np.array([3e-9, 5e-9, 10e-9]), \n",
     "    isImag=False).to('1/um')\n",
     "\n",
     "K_II"
@@ -1714,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 54,
    "id": "8c0af171-1f4c-4f1e-bea7-ff8ead81ffa7",
    "metadata": {},
    "outputs": [
@@ -1757,7 +1763,7 @@
     "\n",
     "The header at the top of this file is for creating a nicely-formatted `.html` document using the program `quarto` ([link](https://quarto.org/)).  To create nicely-formated `.html`versions of this notebook, run `quarto` from the command line as follows\n",
     "\n",
-    "    quarto render dissipation-theory--Study-44.ipynb \n",
+    "    quarto render dissipation-theory--Study-44.ipynb && open dissipation-theory--Study-44.html\n",
     "\n",
     "Other useful information about this notebook:\n",
     "\n",
@@ -1772,6 +1778,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8c42a2da-d234-4913-a34d-182a41dab8d8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "716dc669-c43e-406d-9fed-87a644a371c9",
    "metadata": {},
    "outputs": [],
    "source": []
