development/dissipation-theory--Study-48: Rewrite the code in Study 46 so that the coordinates used in the calculation are scaled by the reference distance zr stored in the sample object.  Picking zr appropriately dramatically improves the accuracy of the C0, C1, and C2 calculations.  We now get few part-per-million agreement with theory.  Proceed with calculating friction and frequency shift.

--- a/development/dissipation-theory--Study-47.ipynb
+++ b/development/dissipation-theory--Study-47.ipynb
@@ -1029,6 +1029,8 @@
    "id": "c8ddd246-00df-4bba-82ef-66cd83f5ea60",
    "metadata": {},
    "source": [
+    "::: {.content-hidden when-format=\"html\"}\n",
+    "\n",
     "# Formatting notes\n",
     "\n",
     "The header at the top of this file is for creating a nicely-formatted `.html` document using the program `quarto` ([link](https://quarto.org/)).  To create nicely-formated `.html`versions of this notebook, run `quarto` from the command line as follows\n",
