dissipationtheory/dissipation9b.py, tests/test_dissipation9b.py, and development/dissipation-theory--Study-51: Upgrade the integrand1 and integrand2 function to return arrays, [re(K0),im(K0),re(K1),im(K1),re(K2),im(K2)].  Add Sample3 and Sample4 objects.  For the Sample4 object, a metal, add a compiled Kmetal_jit function and a second function Kmetalunits_jit returning the complex (K0,K1,K2) tuple with units.  Eight unit tests verify that the compiled functions, operating on Type I through IV samples, return the same six Kn values as the uncompiled functions in dissipationtheory/dissipation9a.py.

--- a/development/dissipation-theory--Study-51.ipynb
+++ b/development/dissipation-theory--Study-51.ipynb
@@ -9,7 +9,7 @@
     "title: Test and profile `dissipation9` code\n",
     "author: \"John A. Marohn\"\n",
     "date: today\n",
-    "abstract: Test and profile the code in the three `dissipationtheory9x.py` files.\n",
+    "abstract: Test and profile the code in the `dissipationtheory9a.py`.\n",
     "toc: true\n",
     "number-sections: true\n",
     "highlight-style: pygments\n",
@@ -193,7 +193,7 @@
    "id": "75116cd4-1431-42b8-9c5c-4814ce8d98cb",
    "metadata": {},
    "source": [
-    "# Common reference points"
+    "# Common parameters"
    ]
   },
   {
