development/dissipation-theory--Study-65 and development/table-of-contents: Add summary of Study 65.

--- a/development/dissipation-theory--Study-65.ipynb
+++ b/development/dissipation-theory--Study-65.ipynb
@@ -1,12 +1,30 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d3bb7f8",
+   "cell_type": "raw",
+   "id": "51c6ab13",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---\n",
+    "title: Calculate dc frequency shift, dissipation, and BLDS spectrum for Type I, II, and III samples and a finite tip\n",
+    "author: \"John A. Marohn\"\n",
+    "date: today\n",
+    "abstract: We have added Type I and Type II support to the twodimCobject object. Demonstrate this functionality by calculating, for a finite tip, the dc frequency shift and dissipation versus tip-sample separation and the BLDS spectrum for Type I, II, and III samples. For 25 height points, the frequency and friction calculation took (user CPU time) 4.1s, 2.5s, 1.7s, and 4.1s for Type I, II, and III samples, respectively. Sample I was 15 nm thick and exhibited a small negative friction, which is unphysical.  This error remained when the number of breakpoints was increased from 15 to 45, and so is likely not caused by imperfect integration. The error changed with the alpha parameter, but using a larger alpha did not eliminate the negative-friction error.  For 40 frequency points, the BLDS spectrum calculation took (user CPU time) 39s, 8.5s, and 7.3s for Type I, II, and III samples, respectively. The BLDS spectrum for the Type II and Type III sample showed the expected roll off. The BLDS spectrum from Sample I was negligibly small, but exhibited two distinct roll-offs.\n",
+    "toc: true\n",
+    "number-sections: true\n",
+    "highlight-style: pygments\n",
+    "embed-resources: true\n",
+    "dpi: 300\n",
+    "format:\n",
+    "    html:\n",
+    "        html-math-method:\n",
+    "          method: mathjax\n",
+    "          url: \"https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js\"\n",
+    "        code-fold: true\n",
+    "        code-tools: true\n",
+    "jupyter: python3\n",
+    "---"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -322,6 +340,27 @@
    "outputs": [],
    "source": [
     "h_array = np.logspace(np.log10(20), np.log10(200), 25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "96055038",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(h_array)"
    ]
   },
   {
@@ -1876,6 +1915,27 @@
     "    obj['III'].set_breakpoints(15)\n",
     "    obj['III'].properties_am(omega_m=omega_m_, omega_am = 250)\n",
     "    df_array['III'][index] = obj['III'].results['Delta f am [Hz]']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "240a47d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(omega_m_array)"
    ]
   },
   {
