development/dissipation-theory--Study-71: Impliment a GPU calculation of the AC and AM frequency shift for a Type I sample.  Unit test GPU code for K0, K1, and K2 against the equivalent CPU code over 35k combinations of sample parameters,  Over a wide range of sample parameters, the real parts of the Kn integrals are correct to within better than 10 ppm.  The imaginary parts of the Kn integrals have large errors, up to 1.1e3 for Im[K2] when the conductivity is large and the charge density is small (and friction is small).  The problem seems to be with the rp calculation for a Type I sample, which I suspect is from torch errors associated with computing hyperbolic function and square roots of complex numbers.

--- a/development/dissipation-theory--Study-70.ipynb
+++ b/development/dissipation-theory--Study-70.ipynb
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e6b273f8",
+   "id": "de830b90",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "438a3ef0",
+   "id": "1b8a72f9",
    "metadata": {},
    "source": [
     "This addition, on the other hand, does what we want."
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2adcb415",
+   "id": "454e9741",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2b23cb4",
+   "id": "b6c613b6",
    "metadata": {},
    "source": [
     "In the code below I used to have\n",
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "bf0d2748",
+   "id": "e050d4a1",
    "metadata": {},
    "outputs": [
     {
@@ -1882,7 +1882,10 @@
     "1. Move the above code into a python file. \n",
     "2. Code up GPU computations of friction and frequency shift for Type I and Type II samples.\n",
     "3. Unit test the $K_n$ integral calculations for Type I, II, and III samples against CPU code.  See Studies 63 and 64.\n",
-    "4. Fit spectra.\n",
+    "4. Fit BLDS spectra (Rachael's PEAPI data).\n",
+    "5. Add friction computation.\n",
+    "6. Add dc frequency shift computation.\n",
+    "7. Fit frequency and friction versus height (Virginia's FAMACs data).\n",
     "\n",
     "There is a GPU-accelerated integration function, `torchquad` ([github](https://github.com/esa/torchquad)), but \"torchquad's GPU support is tested only on NVIDIA cards with CUDA\".  Continue with brute-force integration."
    ]
